# hyperion

./: .devcontainer.json  .dockerignore  .gitignore  .pre-commit-config.yaml  10000uuids.txt  CONTRIBUTING.md  CONTRIBUTOR_AGREEMENT.md  Cargo.toml  DETAILS.md  Dockerfile  Dockerfile-antithesis  Dockerfile-config  Dockerfile-debian  Dockerfile-dev  LICENSE  README.md  clippy.toml  deny.toml  dependabot.yml  docker-compose.release.yml  docker-compose.yml  justfile  layout.kdl  package-lock.json  package.json  rust-toolchain.toml  rustc-ice-2024-12-19T21_43_08-61292.txt  rustfmt.toml
.cargo/: config.toml
.github/: FUNDING.yml  dependabot.yml
.github/chart/: .gitignore  pyproject.toml  readme_chart.py
.github/workflows/: bench.yml  bench_main.yml  bench_pr.yml  build.yml  cla.yml  compare.yml  (+6 more)
.sqlx/: query-7390a53f48245e9d1f74dd526331948ce4a9861ff21458e851fedbe998898c7b.json  query-a39613c5c58094b7d32710837e3ee813d845b6f336d989845fe85f24fc7e74ac.json  query-c64bb11d4b7848c8378efd3806064e05efe143af12f3785f1562c4f44661bde5.json
antithesis/: docker-compose.yml
broadcast/: Cargo.toml  bench1.txt
broadcast/benches/: group.rs  hilbert.rs  world.rs
broadcast/src/: lib.rs  utils.rs
broadcast/src/utils/: cache.rs  group.rs  pow2.rs
broadcast/src/utils/cache/: hilbert.rs
chunk/: Cargo.toml  clippy.toml
client/: Cargo.toml
crates/bvh/: Cargo.toml  README.md
crates/bvh-region/: Cargo.toml  README.md
crates/bvh-region/benches/: bvh.rs  side_by_side.rs  sort.rs
crates/bvh-region/src/: aabb.rs  build.rs  lib.rs  node.rs  plot.rs  query.rs  tests.rs  utils.rs
crates/bvh-region/src/query/: closest.rs  range.rs  ray.rs
crates/bvh-region/tests/: simple.rs
crates/bvh/benches/: build.rs  bvh.rs  side_by_side.rs  sort.rs
crates/bvh/src/: aabb.rs  lib.rs  plot.rs  queue.rs  tests.rs
crates/generator-build/: Cargo.toml  README.md
crates/geometry/: Cargo.toml  README.md
crates/geometry/src/: aabb.rs  lib.rs  ray.rs
crates/hyperion-bot/: Cargo.toml  README.md
crates/hyperion-bot/src/: bot.rs  config.rs  generate.rs  handshake.rs  lib.rs  main.rs  util.rs
crates/hyperion-bot/src/bot/: handshake.rs
crates/hyperion-bot/src/generate/: name.rs
crates/hyperion-clap/: Cargo.toml  README.md
crates/hyperion-clap-macros/: Cargo.toml
crates/hyperion-clap-macros/src/: lib.rs
crates/hyperion-clap/src/: lib.rs
crates/hyperion-clap/tests/: gamemode.rs
crates/hyperion-command/: Cargo.toml  README.md
crates/hyperion-command/src/: component.rs  lib.rs  system.rs
crates/hyperion-crafting/: Cargo.toml  README.md
crates/hyperion-crafting/src/: lib.rs
crates/hyperion-event-macros/: Cargo.toml  README.md
crates/hyperion-event-macros/src/: lib.rs
crates/hyperion-genmap/: Cargo.toml  README.md
crates/hyperion-genmap/src/: lib.rs
crates/hyperion-gui/: Cargo.toml
crates/hyperion-gui/src/: lib.rs
crates/hyperion-inventory/: Cargo.toml  README.md
crates/hyperion-inventory/src/: action.rs  lib.rs  parser.rs
crates/hyperion-item/: Cargo.toml  README.md
crates/hyperion-item/src/: builder.rs  lib.rs
crates/hyperion-item/src/builder/: book.rs
crates/hyperion-palette/: Cargo.toml  README.md
crates/hyperion-palette/src/: encode.rs  indirect.rs  lib.rs
crates/hyperion-permission/: Cargo.toml  README.md
crates/hyperion-permission/src/: lib.rs  storage.rs
crates/hyperion-proto/: Cargo.toml  build.rs  rustfmt.toml
crates/hyperion-proto/src/: lib.rs  proxy_to_server.proto  proxy_to_server.rs  server_to_proxy.proto  server_to_proxy.rs  shared.proto  shared.rs
crates/hyperion-proxy/: Cargo.toml  Dockerfile  README.md
crates/hyperion-proxy/src/: cache.rs  data.rs  egress.rs  lib.rs  main.rs  player.rs  server_sender.rs  util.rs
crates/hyperion-rank-tree/: Cargo.toml  README.md
crates/hyperion-rank-tree/src/: inventory.rs  item.rs  lib.rs  skin.rs  util.rs
crates/hyperion-rank-tree/src/item/: ext.rs
crates/hyperion-rank-tree/src/skin/: archer.toml  builder.toml  excavator.toml  knight.toml  mage.toml  miner.toml  stick.toml  swordsman.toml
crates/hyperion-rank-tree/src/skin/blue/: knight.toml
crates/hyperion-rank-tree/src/skin/green/: knight.toml
crates/hyperion-rank-tree/src/skin/red/: knight.toml
crates/hyperion-rank-tree/src/skin/yellow/: knight.toml
crates/hyperion-stats/: Cargo.toml  README.md
crates/hyperion-stats/benches/: parallel_stats.rs
crates/hyperion-stats/src/: lib.rs  nd.rs
crates/hyperion-text/: Cargo.toml  README.md
crates/hyperion-text/src/: color.rs  event.rs  font.rs  helper.rs  lib.rs  scoreboard.rs
crates/hyperion-utils/: Cargo.toml  README.md
crates/hyperion-utils/src/: cached_save.rs  lib.rs
docs/: index.md  inventory.md
examples/: Cargo.toml  basic.rs
extracted/: effects.json  entities.json  items.json  misc.json  tags.json  translation_keys.json
extractor/: README.md  build.gradle  gradle.properties
generator/: Cargo.toml  build.rs
generator-build/: Cargo.toml
protocol-765/: Cargo.toml  clippy.toml
protocol-765/src/: chunk.rs  client.rs  clientbound.rs  handshake.rs  lib.rs  play.rs  serverbound.rs  status.rs
protocol-765/src/configuration/: clientbound.rs  serverbound.rs
protocol-765/src/handshake/: clientbound.rs  serverbound.rs
protocol-765/src/play/: clientbound.rs
prototype/: Cargo.toml
quadtree/: Cargo.toml  rustfmt.toml
quadtree/benches/: rebuild.rs
quadtree/src/: aaab.rs  idx.rs  iter.rs  lib.rs  nearest.rs  rebuild.rs
run/: config.toml
ser/: Cargo.toml
ser-macro/: Cargo.toml
ser-macro/src/: lib.rs
ser/src/: lib.rs  types.rs
server/: Cargo.toml  clippy.toml
server/benches/: many_zombies.rs
server/src/: bits.rs  blocks.rs  bounding_box.rs  chunk.rs  global.rs  handshake.rs  io.rs  lib.rs  main.rs  net.rs  packets.rs  quad_tree.rs  singleton.rs  system.rs
server/src/singleton/: encoder.rs
server/src/system/: broadcast_packets.rs  entity_detect_collisions.rs  entity_move_logic.rs  init_entity.rs  init_player.rs  keep_alive.rs  kill_all.rs  player_join_world.rs  player_kick.rs  reset_bounding_boxes.rs  send_zombies.rs  tps_message.rs
(+507 files in other folders)
