# https://doc.rust-lang.org/rustc/profile-guided-optimization.html
# https://nikolaivazquez.com/blog/divan/#measure-allocations
# https://doc.rust-lang.org/cargo/reference/profiles.html

[workspace]
resolver = "2"

members = [
    "crates/bvh-region",
    "crates/lunar-proto",
    "crates/hyperion",
    "crates/hyperion-proxy",
    "crates/hyperion-proto",
    "events/infection",
    "examples",
]

[profile.release-full]
inherits = "release"
debug = false
lto = "fat"
codegen-units = 1
panic = "abort"

# custom release-debug profile
[profile.release-debug]
inherits = "release"
debug = true

#[profile.bench]
##debug = true
#lto = "fat"
#codegen-units = 1

[workspace.dependencies]
anyhow = "1.0.86"
arc-swap = "1.7.1"
arrayvec = "0.7.4"
base64 = "0.22.1"
bitfield-struct = "0.8.0"
bitvec = "1.0.1"
bumpalo = "3.16"
bvh-region = { path = "crates/bvh-region" }
bytes = "1.6.0"
clap = { version = "4.5.7", features = ["derive"] }
compact_str = "0.8.0"
criterion = "0.5.1"
derive_more = { version = "1.0.0-beta.7", features = ["display", "from", "deref", "deref_mut", "debug"] }
dirs-next = "2.0.0"
divan = "0.1.14"
fastrand = "2.1.0"
flate2 = { version = "1.0.30", default-features = false }
fxhash = "0.2.1"
glam = "0.26.0"
heapless = "0.8.0"
heed = "0.20.5"
hex = "0.4.3"
itertools = "0.13.0"
kanal = "0.1.0-pre8"
libc = "0.2.155"
libdeflater = "1.20.0"
more-asserts = "0.3.1"
no_denormals = "0.1.2"
once_cell = "1.19.0"
ordered-float = "4.2.0"
ouroboros = "0.18.4"
parking_lot = "0.12.3"
plotters = { version = "0.3.6", default-features = false }
plotters-bitmap = "0.3.6"
prost = "0.13.1"
prost-build = "0.13.1"
prost-types = "0.13.1"
rand = "0.8.5"
rayon = "1.10.0"
reqwest = "0.12.5"
rustc_version = "0.4.0"
serde = "1.0.203"
serde_json = "1.0.117"
sha2 = "0.10.8"
slotmap = "1.0.7"
tango-bench = "0.5.0"
tar = "0.4.41"
thiserror = "1.0.63"
tokio = "1.38.0"
toml = "0.8.14"
tracing = { version = "0.1.40" }
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.0"
uuid = "1.8.0"

bvh = { git = "https://github.com/andrewgazelka/bvh-data" }
flecs_ecs = { git = "https://github.com/Indra-db/Flecs-Rust" }
hyperion = { path = "crates/hyperion" }
hyperion-proto = { path = "crates/hyperion-proto" }
valence_text = { git = "https://github.com/andrewgazelka/valence", branch = "feat-open" }
valence_protocol = { git = "https://github.com/andrewgazelka/valence", features = ["compression"], branch = "feat-open" }
valence_registry = { git = "https://github.com/andrewgazelka/valence", branch = "feat-open" }
valence_anvil = { git = "https://github.com/andrewgazelka/valence", features = ["parsing"], branch = "feat-open" }
valence_server = { git = "https://github.com/andrewgazelka/valence", branch = "feat-open" }
valence_nbt = { git = "https://github.com/andrewgazelka/valence", features = ["serde"], branch = "feat-open" }
valence_generated = { git = "https://github.com/andrewgazelka/valence", branch = "feat-open" }

# todo: re-enable rayon
#evenio = { git = "https://github.com/andrewgazelka/evenio", features = ["rayon"], branch = "feat-sender-state-public"}

[workspace.lints.rust]
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
let_underscore = { level = "deny", priority = -1 }
nonstandard_style = { level = "deny", priority = -1 }
refining_impl_trait = { level = "deny", priority = -1 }
rust_2024_compatibility = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }

[workspace.lints.clippy]
complexity = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
too_long_first_doc_paragraph = "allow"
derive_partial_eq_without_eq = "allow"
enum_variant_names = "allow"
module_name_repetitions = "allow"