[profile]
[profile.release-debug]
debug = true
inherits = 'release'

[profile.release-full]
codegen-units = 1
debug = false
inherits = 'release'
lto = 'fat'
panic = 'abort'

[workspace]
members = [
  'crates/bvh-region',
  'crates/hyperion',
  'crates/hyperion-crafting',
  'crates/hyperion-event-macros',
  'crates/hyperion-inventory',
  'crates/hyperion-minecraft-proto',
  'crates/hyperion-nerd-font',
  'crates/hyperion-palette',
  'crates/hyperion-proto',
  'crates/hyperion-proxy',
  'crates/hyperion-scheduled',
  'crates/hyperion-stats',
  'crates/hyperion-text',
  'crates/hyperion-utils',
  'events/tag',
  'crates/hyperion-permission',
  'crates/hyperion-clap',
  'crates/hyperion-command',
  'crates/hyperion-rank-tree',
  'crates/hyperion-item',
  'crates/geometry',
]
resolver = '2'

[workspace.dependencies]
anyhow = '1.0.86'
approx = '0.5.1'
arrayvec = '0.7.4'
base64 = '0.22.1'
bitfield-struct = '0.9.2'
bitvec = '1.0.1'
bumpalo = '3.16'
byteorder = '1.5.0'
bytes = '1.8.0'
colored = '2.1.0'
compact_str = '0.8.0'
convert_case = '0.6.0'
criterion = '0.5.1'
derive-build = '0.1.1'
directories = '5.0.1'
dotenvy = '0.15.7'
enumset = '1.1.5'
fastrand = '2.1.0'
futures-util = '0.3.31'
glam = '0.29.0'
heapless = '0.8.0'
heed = '0.20.5'
hex = '0.4.3'
itertools = '0.13.0'
kanal = '0.1.0-pre8'
libc = '0.2.155'
libdeflater = '1.20.0'
memmap2 = '0.9.5'
more-asserts = '0.3.1'
no_denormals = '0.1.2'
num-derive = '0.4.2'
num-traits = '0.2.19'
once_cell = '1.19.0'
ordered-float = '4.2.0'
ouroboros = '0.18.4'
papaya = '0.1.4'
parking_lot = '0.12.3'
paste = '1.0.15'
plotters-bitmap = '0.3.6'
proc-macro2 = '1.0.89'
quote = '1.0.37'
rand = '0.8.5'
rayon = '1.10.0'
rkyv = '0.8.8'
rustc-hash = '2.0.0'
serde = '1.0.214'
serde_json = '1.0.117'
slotmap = '1.0.7'
snafu = '0.8.5'
syn = '2.0.87'
tango-bench = '0.6.0'
tar = '0.4.41'
thiserror = '2.0.1'
tikv-jemallocator = '0.6.0'
tokio = '1.40.0'
toml = '0.8.14'
uuid = '1.8.0'

[workspace.dependencies.geometry]
path = 'crates/geometry'

[workspace.dependencies.bvh]
git = 'https://github.com/andrewgazelka/bvh-data'

[workspace.dependencies.bvh-region]
path = 'crates/bvh-region'

[workspace.dependencies.bytemuck]
features = ['derive']
version = '1.19.0'

[workspace.dependencies.clap]
features = ['derive']
version = '4.5.7'

[workspace.dependencies.derive_more]
features = ['display', 'from', 'deref', 'deref_mut', 'debug', 'constructor']
version = '1.0.0-beta.7'

[workspace.dependencies.divan]
git = 'https://github.com/nvzqz/divan'

[workspace.dependencies.flate2]
default-features = false
version = '1.0.30'

[workspace.dependencies.flecs_ecs]
features = ['flecs_manual_registration']
git = 'https://github.com/Indra-db/Flecs-Rust'

[workspace.dependencies.gxhash]
version = '3.4.1'

[workspace.dependencies.hyperion]
path = 'crates/hyperion'

[workspace.dependencies.hyperion-clap]
path = 'crates/hyperion-clap'

[workspace.dependencies.hyperion-command]
path = 'crates/hyperion-command'

[workspace.dependencies.hyperion-crafting]
path = 'crates/hyperion-crafting'

[workspace.dependencies.hyperion-event-macros]
path = 'crates/hyperion-event-macros'

[workspace.dependencies.hyperion-inventory]
path = 'crates/hyperion-inventory'

[workspace.dependencies.hyperion-item]
path = 'crates/hyperion-item'

[workspace.dependencies.hyperion-nerd-font]
path = 'crates/hyperion-nerd-font'

[workspace.dependencies.hyperion-palette]
path = 'crates/hyperion-palette'

[workspace.dependencies.hyperion-permission]
path = 'crates/hyperion-permission'

[workspace.dependencies.hyperion-proto]
path = 'crates/hyperion-proto'

[workspace.dependencies.hyperion-rank-tree]
path = 'crates/hyperion-rank-tree'

[workspace.dependencies.hyperion-scheduled]
path = 'crates/hyperion-scheduled'

[workspace.dependencies.hyperion-text]
path = 'crates/hyperion-text'

[workspace.dependencies.hyperion-utils]
path = 'crates/hyperion-utils'

[workspace.dependencies.indexmap]
features = ['rayon']
version = '2.6.0'

[workspace.dependencies.ndarray]
features = ['blas']
version = '0.16.1'

[workspace.dependencies.plotters]
default-features = false
version = '0.3.6'

[workspace.dependencies.regex]
features = ['perf-dfa-full']
version = '1.11.1'

[workspace.dependencies.reqwest]
features = ['rustls-tls', 'stream']
version = '0.12.9'

[workspace.dependencies.roaring]
features = ['simd']
version = '0.10.6'

[workspace.dependencies.sha2]
version = '0.10.8'

[workspace.dependencies.tokio-util]
features = ['full']
version = '0.7.12'

[workspace.dependencies.tracing]
features = ['release_max_level_info']
version = '0.1.40'

[workspace.dependencies.tracing-subscriber]
features = ['env-filter', 'time']
version = '0.3.18'

[workspace.dependencies.tracing-tracy]
features = ['timer-fallback']
version = '0.11.3'

[workspace.dependencies.valence_anvil]
branch = 'feat-open'
features = ['parsing']
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_generated]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_ident]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_nbt]
branch = 'feat-open'
features = ['serde']
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_protocol]
branch = 'feat-open'
features = ['compression']
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_registry]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_server]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.dependencies.valence_text]
branch = 'feat-open'
git = 'https://github.com/andrewgazelka/valence'

[workspace.lints]
[workspace.lints.clippy]
cast_precision_loss = 'allow'
future_not_send = 'allow'
missing_errors_doc = 'allow'
missing_panics_doc = 'allow'
module_name_repetitions = 'allow'
single_match_else = 'allow'
too_long_first_doc_paragraph = 'allow'
too_many_lines = 'allow'

[workspace.lints.clippy.complexity]
level = 'deny'
priority = -1

[workspace.lints.clippy.nursery]
level = 'deny'
priority = -1

[workspace.lints.clippy.pedantic]
level = 'deny'
priority = -1

[workspace.lints.clippy.perf]
level = 'deny'
priority = -1

[workspace.lints.clippy.style]
level = 'deny'
priority = -1

[workspace.lints.clippy.suspicious]
level = 'deny'
priority = -1

[workspace.lints.rust]
[workspace.lints.rust.future_incompatible]
level = 'deny'
priority = -1

[workspace.lints.rust.keyword_idents]
level = 'deny'
priority = -1

[workspace.lints.rust.let_underscore]
level = 'deny'
priority = -1

[workspace.lints.rust.nonstandard_style]
level = 'deny'
priority = -1

[workspace.lints.rust.refining_impl_trait]
level = 'deny'
priority = -1

[workspace.lints.rust.rust_2018_idioms]
level = 'deny'
priority = -1

[workspace.lints.rust.rust_2024_compatibility]
level = 'deny'
priority = -1
