[package]
name = "broadcast"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
fast_hilbert = "2.0.0"
fnv = "1.0.7"

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"

[[bench]]
name = "group"
harness = false

[[bench]]
name = "world"
harness = false

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
