[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
anyhow = "1.0.82"
evenio.workspace = true
fastrand = "2.0.2"
serde_json = "1.0.116"
server.workspace = true
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["chrono", "env-filter"] }
clap = { version = "4.5.4", features = ["derive"] }
tracing-tracy = "0.11.0"

[[example]]
name = "basic"
path = "basic.rs"