[package]
name = "examples"
version = "0.0.0"
publish = false
edition = "2021"

[dependencies]
hyperion.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["chrono", "env-filter"] }
clap = { workspace = true, features = ["derive"] }

[[example]]
name = "basic"
path = "basic.rs"