[package]
name = "protocol-765"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"

[dependencies]
ser.workspace = true


[lints.rust]
warnings = "deny"

[lints.clippy]
# cargo
cargo_common_metadata = "allow"
#multiple_crate_versions = "warn"
negative_feature_names = "deny"
redundant_feature_names = "deny"
wildcard_dependencies = "deny"

complexity = "deny"

nursery = "deny"

pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "allow" # consider denying; this is allowed because Copilot often generates code that triggers this lint
needless_pass_by_value = "allow" # consider denying
cast_lossless = "allow"
cast_possible_truncation = "allow" # consider denying
cast_precision_loss = "allow" # consider denying

perf = "deny"

style = "deny"

suspicious = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = "allow"
