[package]
name = "quadtree"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
glam = "0.27.0"
itertools = "0.12.1"
num-traits = "0.2.18"

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"

[[bench]]
name = "rebuild"
harness = false

[lints.clippy]
complexity = "deny"

nursery = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"

pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
