[package]
name = "ser-macro"
version = "0.1.2"
edition = "2018"
description = "Packet macros for swarm bot"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "2.0.39", features = ["full", "fold"] }
quote = "1.0.33"
proc-macro2 = "1.0.70"

[lib]
proc-macro = true
