[package]
name = "ser"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"

[dependencies]
ser-macro = { workspace = true, optional = true }
byteorder = "1.5.0"
uuid = "1.7.0"
tracing = "0.1.40"
serde = "1.0.197"
serde_json = "1.0.114"
anyhow = "1.0.80"
regex = "1.10.3"
once_cell = "1.19.0"
bytes = "1.5.0"
bytemuck = "1.14.3"
valence_nbt = { version = "0.8.0", features = ["binary"] }

[features]
default = ["ser-macro"]


[lints.rust]
warnings = "deny"

[lints.clippy]
# cargo
cargo_common_metadata = "allow"
#multiple_crate_versions = "warn"
negative_feature_names = "deny"
redundant_feature_names = "deny"
wildcard_dependencies = "deny"

#restriction = { level = "deny", priority = -1 }
missing_docs_in_private_items = "allow"
question_mark_used = "allow"
print_stdout = "allow"
implicit_return = "allow"
shadow_reuse = "allow"
absolute_paths = "allow"
use_debug = "allow"
unwrap_used = "allow"
std_instead_of_alloc = "allow" # consider denying
default_numeric_fallback = "allow"
as_conversions = "allow"
arithmetic_side_effects = "allow"
shadow_unrelated = "allow"
unseparated_literal_suffix = "allow"
else_if_without_else = "allow"
float_arithmetic = "allow"
single_call_fn = "allow"
pub_use = "allow"

complexity = "deny"

nursery = { level = "deny", priority = -1 }
future_not_send = "allow"

pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "allow" # consider denying; this is allowed because Copilot often generates code that triggers this lint
needless_pass_by_value = "allow" # consider denying
cast_lossless = "allow"
cast_possible_truncation = "allow" # consider denying
cast_precision_loss = "allow" # consider denying
missing_errors_doc = "allow" # consider denying

perf = "deny"

style = "deny"

suspicious = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = "allow"
