[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
anyhow = "1.0.80"
tracing-subscriber = { version = "0.3.18", features = ["chrono"] }
tracing = "0.1.40"
serde_json = "1.0.114"
bytes = "1.5.0"
#azalea = { git = "https://github.com/azalea-rs/azalea" }
#valence_protocol.workspace = true

#valence = { git = "https://github.com/valence-rs/valence" }
valence_protocol = { git = "https://github.com/andrewgazelka/valence" }
valence_registry = { git = "https://github.com/andrewgazelka/valence" }
#valence_server = { git = "https://github.com/andrewgazelka/valence" }

#azalea = { git = "https://github.com/azalea-rs/azalea", branch = "1.20.1" }
azalea-buf = { git = "https://github.com/azalea-rs/azalea", branch = "1.20.1" }
azalea-world = { git = "https://github.com/azalea-rs/azalea", branch = "1.20.1" }


# no secure alloc
mimalloc = { version = "0.1.39" , default-features = false }
sha2 = "0.10.8"
itertools = "0.12.1"
rand = "0.8.5"
evenio = { git = "https://github.com/rj00a/evenio", features = ["rayon"] }
flume = "0.11.0"


[lints.rust]
warnings = "deny"

[lints.clippy]
# cargo
cargo_common_metadata = "allow"
#multiple_crate_versions = "warn"
negative_feature_names = "deny"
redundant_feature_names = "deny"
wildcard_dependencies = "deny"

restriction = { level = "deny", priority = -1 }
missing_docs_in_private_items = "allow"
question_mark_used = "allow"
print_stdout = "allow"
implicit_return = "allow"
shadow_reuse = "allow"
absolute_paths = "allow"
use_debug = "allow"
unwrap_used = "allow"
std_instead_of_alloc = "allow" # consider denying
default_numeric_fallback = "allow"
as_conversions = "allow"
arithmetic_side_effects = "allow"
shadow_unrelated = "allow"
unseparated_literal_suffix = "allow"
else_if_without_else = "allow"
float_arithmetic = "allow"
single_call_fn = "allow"
missing_inline_in_public_items = "allow"
exhaustive_structs = "allow"
pub_use = "allow"
let_underscore_untyped = "allow"
infinite_loop = "allow"
single_char_lifetime_names = "allow"
min_ident_chars = "allow"
std_instead_of_core = "allow"
items_after_statements = "allow"
shadow_same = "allow"
let_underscore_must_use = "allow"
mod_module_files = "deny"
self_named_module_files = "allow"

complexity = "deny"

nursery = { level = "deny", priority = -1 }
future_not_send = "allow"

pedantic = { level = "deny", priority = -1 }
uninlined_format_args = "allow" # consider denying; this is allowed because Copilot often generates code that triggers this lint
needless_pass_by_value = "allow" # consider denying
cast_lossless = "allow"
cast_possible_truncation = "allow" # consider denying
cast_precision_loss = "allow" # consider denying
missing_errors_doc = "allow" # consider denying
wildcard_imports = "allow"

perf = "deny"

style = "deny"

suspicious = { level = "deny", priority = -1 }
blanket_clippy_restriction_lints = "allow"
