cargo-features = ["edition2024"]

[[bench]]
harness = false
name = "sort"

[[bench]]
harness = false
name = "bvh"

[[bench]]
harness = false
name = "side_by_side"

[dependencies]
glam = {workspace = true, features = ["serde"]}
plotters = {workspace = true, features = [
  "plotters-bitmap",
  "image"
], optional = true}
plotters-bitmap = {workspace = true, optional = true}
serde = {workspace = true}
arrayvec = {workspace = true}
fastrand = {workspace = true}
itertools = {workspace = true}
ordered-float = {workspace = true}
rayon = {workspace = true}
tracing = {workspace = true}

[dev-dependencies]
criterion = {workspace = true}
divan = {workspace = true}
rand = {workspace = true}
tango-bench = {workspace = true}
tracing-subscriber = {workspace = true}

[features]
default = []
plot = ["dep:plotters", "dep:plotters-bitmap"]

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "bvh-region"
publish = false
readme = "README.md"
version = "0.1.0"
