[[bench]]
harness = false
name = "sort"

#[[bench]]
#harness = false
#name = "bvh"
#
#[[bench]]
#harness = false
#name = "side_by_side"

[dependencies]
arrayvec = { workspace = true }
derive_more = { workspace = true }
fastrand = { workspace = true }
geometry = { workspace = true }
glam = { workspace = true, features = ["serde"] }
ordered-float = { workspace = true }
plotters = { workspace = true, features = ["plotters-bitmap", "image"], optional = true }
plotters-bitmap = { workspace = true, optional = true }
proptest = { workspace = true }
rayon = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
rand = { workspace = true }
#divan = {workspace = true}
#tango-bench = {workspace = true}

[features]
default = []
plot = ["dep:plotters", "dep:plotters-bitmap"]

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition.workspace = true
name = "bvh-region"
publish = false
readme = "README.md"
version.workspace = true
