[package]
name = "bvh"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
fastrand = "2.0.2"
glam.workspace = true
rayon = "1.10.0"
smallvec.workspace = true

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"
ordered-float = "4.2.0"
fastrand = "2.0.2"

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "bvh"
harness = false

[lints.clippy]
complexity = "deny"


nursery = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"

#pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
