[package]
name = "bvh"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
fastrand = "2.0.2"
glam.workspace = true
rayon = "1.10.0"
arrayvec = "0.7.4"
ordered-float = "4.2.0"
itertools = "0.12.1"
plotters = { version = "0.3.5", default-features = false, features = ["plotters-bitmap", "image"] }
plotters-bitmap = "0.3.3"
debug_print = "1.0.0"
tracing = { version = "0.1.40"  }

[dev-dependencies]
divan = "0.1.14"
rand = "0.8.5"
ordered-float = "4.2.0"
fastrand = "2.0.2"
tango-bench = "0.4.0"
tracing-subscriber = "0.3.18"

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "bvh"
harness = false

[[bench]]
name = "build"
harness = false

[lints.clippy]
complexity = "deny"


nursery = { level = "deny", priority = -1 }
redundant_pub_crate = "allow"

#pedantic = "deny"
perf = "deny"
style = "deny"
suspicious = "deny"
