[package]
name = "geometry"
version.workspace = true
edition.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
glam = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
ordered-float = "4.5.0"

[dev-dependencies]
approx = { workspace = true }

[lints]
workspace = true
