cargo-features = ["edition2024"]

[dependencies]
eyre = "0.6.12"
tokio = {features = ["full"], workspace = true}
antithesis.workspace = true
derive_more.workspace = true
dotenvy.workspace = true
envy.workspace = true
rand.workspace = true
regex.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
valence_protocol.workspace = true
valence_server = { workspace = true }
bytes = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-bot"
publish = false
readme = "README.md"
version = "0.1.0"
