cargo-features = ["edition2024"]

[package]
name = "hyperion-clap"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
flecs_ecs.workspace = true
hyperion-command.workspace = true
tracing.workspace = true
hyperion.workspace = true
valence_protocol.workspace = true

[lints]
workspace = true
