[package]
name = "hyperion-clap"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
clap ={ workspace = true }
flecs_ecs = { workspace = true }
hyperion = { workspace = true }
hyperion-clap-macros = { workspace = true }
hyperion-command = { workspace = true }
hyperion-permission = { workspace = true }
tracing = { workspace = true }
valence_protocol = { workspace = true }

[lints]
workspace = true
