[package]
name = "hyperion-command"
version = "0.1.0"
edition = "2024"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
flecs_ecs = {workspace = true}
gxhash = {workspace = true}
hyperion = {workspace = true}
indexmap = {workspace = true}
regex = {workspace = true}
tracing = {workspace = true}

[lints]
workspace = true
