[package]
name = "hyperion-command"
version.workspace = true
edition.workspace = true
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
flecs_ecs = { workspace = true }
hyperion = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
