[package]
name = "hyperion-crafting"
version = "0.1.0"
edition = "2021"
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
readme = "README.md"
publish = false

[dependencies]
valence_protocol.workspace = true
anyhow.workspace = true
flecs_ecs.workspace = true
derive-build.workspace = true
slotmap.workspace = true

[lints]
workspace = true
