[dependencies]
anyhow = { workspace = true }
derive-build = { workspace = true }
flecs_ecs = { workspace = true }
slotmap = { workspace = true }
valence_protocol = { workspace = true }

[lints]
workspace = true

[package]
authors = ["Andrew Gazelka <andrew.gazelka@gmail.com>"]
edition = "2024"
name = "hyperion-crafting"
publish = false
readme = "README.md"
version = "0.1.0"
